# CMagic

./: CMakeLists.txt  LICENSE  README.md  annotated.html  classcmagic_1_1map-members.html  classcmagic_1_1map.html  classcmagic_1_1map_1_1iterator-members.html  classcmagic_1_1map_1_1iterator.html  classcmagic_1_1set-members.html  classcmagic_1_1set.html  classcmagic_1_1set_1_1iterator-members.html  classcmagic_1_1set_1_1iterator.html  classcmagic_1_1vector-members.html  classcmagic_1_1vector.html  classes.html  dir_44c072ab02ac2e2fd88e432906969033.html  dir_bdd6293359532317c39e1b0104b7a9c4.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  map_8h.html  map_8h_source.html  map_8hpp.html  map_8hpp_source.html  memory_8h.html  memory_8h_source.html  menudata.js  set_8h.html  set_8h_source.html  set_8hpp.html  (+17 more)
.github/workflows/: cmake.yml
cmake/: check_lang_features.cmake  cmagic_config.h.in  config.cmake  utils.cmake
doc/quickstart-example/: CMakeLists.txt  expected_output.txt  hello.c  hello.cpp
include/cmagic/: map.h  memory.h  set.h  utils.h  vector.h
include_cxx/cmagic/: map.hpp  set.hpp  vector.hpp
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  variables_0.js  variables_1.js  variables_2.js
src/: CMakeLists.txt  map.c  memory.c  set.c  utils.c  vector.c
src/internal/: CMakeLists.txt  avl_tree.c  avl_tree.h
test/: CMakeLists.txt  avl_tree.c  map.c  map_cxx.cpp  memory.c  memory_cxx.cpp  set.c  set_cxx.cpp  utils.c  vector.c  vector_cxx.cpp
